# docs/swagger.json
@@ -17,9 +17,14 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/cars": {
+        "/comment": {
             "get": {
-                "description": "Get details of all car",
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Get details of all comment",
                 "consumes": [
                     "application/json"
                 ],
@@ -27,7 +32,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "cars"
+                    "Comment"
                 ],
                 "summary": "Get details",
                 "responses": {
@@ -40,7 +45,12 @@
                 }
             },
             "post": {
-                "description": "Get details of car corresponding to the input id",
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Create Comment corresponding to the photo id in param",
                 "consumes": [
                     "application/json"
                 ],
@@ -48,17 +58,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "cars"
+                    "Comment"
                 ],
-                "summary": "Post details for a given id",
+                "summary": "Post comment for a given id",
                 "parameters": [
                     {
-                        "description": "create car",
-                        "name": "entities.Comment",
+                        "description": "create comment",
+                        "name": "dto.CommentRequestBody",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entities.Comment"
+                            "$ref": "#/definitions/dto.CommentRequestBody"
                         }
                     }
                 ],
@@ -72,9 +82,14 @@
                 }
             }
         },
-        "/cars/{Id}": {
+        "/comment/{Id}": {
             "get": {
-                "description": "Get details of car corresponding to the input id",
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Get details of comment corresponding to the input id",
                 "consumes": [
                     "application/json"
                 ],
@@ -82,7 +97,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "cars"
+                    "Comment"
                 ],
                 "summary": "Get details for a given id",
                 "responses": {
@@ -95,7 +110,12 @@
                 }
             },
             "delete": {
-                "description": "Delete the car corresponding to the input id",
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Delete the comment corresponding to the input id",
                 "consumes": [
                     "application/json"
                 ],
@@ -103,13 +123,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "cars"
+                    "Comment"
                 ],
-                "summary": "Delete car identified by given id",
+                "summary": "Delete comment identified by given id",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "ID of the car to be deleted",
+                        "description": "ID of the comment to be deleted",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -122,7 +142,12 @@
                 }
             },
             "patch": {
-                "description": "Update details of car corresponding to the input id",
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Update details of Comment corresponding to the input id",
                 "consumes": [
                     "application/json"
                 ],
@@ -130,13 +155,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "cars"
+                    "Comment"
                 ],
-                "summary": "Update car identified by given id",
+                "summary": "Update comment identified by given id",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "ID of the car to be updated",
+                        "description": "ID of the comment to be updated",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -151,9 +176,194 @@
                     }
                 }
             }
+        },
+        "/photo": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Get details of all photo",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Photo"
+                ],
+                "summary": "Get details",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entities.Photo"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Create Photo corresponding to the photo id in param",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Photo"
+                ],
+                "summary": "Post Photo for a given id",
+                "parameters": [
+                    {
+                        "description": "create photo",
+                        "name": "dto.PhotoRequestBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.PhotoRequestBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entities.Photo"
+                        }
+                    }
+                }
+            }
+        },
+        "/photo/{Id}": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Get details of photo corresponding to the input id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Photo"
+                ],
+                "summary": "Get details for a given id",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entities.Photo"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Delete the photo corresponding to the input id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Photo"
+                ],
+                "summary": "Delete photo identified by given id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID of the photo to be deleted",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No photo"
+                    }
+                }
+            },
+            "patch": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Update details of Photo corresponding to the input id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Photo"
+                ],
+                "summary": "Update photo identified by given id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID of the photo to be updated",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entities.Photo"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "dto.CommentRequestBody": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "photo_id": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.PhotoRequestBody": {
+            "type": "object",
+            "properties": {
+                "caption": {
+                    "type": "integer"
+                },
+                "title": {
+                    "type": "integer"
+                }
+            }
+        },
         "entities.Comment": {
             "type": "object",
             "properties": {
@@ -176,6 +386,49 @@
                     "type": "integer"
                 }
             }
+        },
+        "entities.Photo": {
+            "type": "object",
+            "properties": {
+                "caption": {
+                    "type": "string"
+                },
+                "comments": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entities.Comment"
+                    }
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "imageID": {
+                    "type": "integer"
+                },
+                "photo_url": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "userID": {
+                    "type": "integer"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "Bearer": {
+            "description": "Type \"Bearer\" followed by a space and JWT token.",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
