# src/handlers/comment_handler.go
@@ -10,15 +10,16 @@ import (
 	"github.com/golang-jwt/jwt/v5"
 )
 
-// CreateCars godoc
-// @Summary Post details for a given id
-// @Description Get details of car corresponding to the input id
-// @Tags cars
+// Post Comment godoc
+// @Summary Post comment for a given id
+// @Description Create Comment corresponding to the photo id in param
+// @Tags Comment
 // @Accept json
 // @Produce json
-// @Param entities.Comment body entities.Comment true "create car"
+// @Param dto.CommentRequestBody body dto.CommentRequestBody true "create comment"
 // @Success 200 {object} entities.Comment
-// @Router /cars [post]
+// @Router /comment [post]
+// @Security Bearer
 func (h httpHandlerImpl) PostComment(ctx *gin.Context) {
 	userData := ctx.MustGet("userData").(jwt.MapClaims)
 	userID := uint(userData["id"].(float64))
@@ -49,14 +50,15 @@ func (h httpHandlerImpl) PostComment(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, gin.H{"data": comment})
 }
 
-// GetAllCar godoc
+// Get All Comment godoc
 // @Summary Get details
-// @Description Get details of all car
-// @Tags cars
+// @Description Get details of all comment
+// @Tags Comment
 // @Accept json
 // @Produce json
 // @Success 200 {object} entities.Comment
-// @Router /cars [get]
+// @Router /comment [get]
+// @Security Bearer
 func (h httpHandlerImpl) GetAllComment(ctx *gin.Context) {
 	comments, err := h.CommentService.GetAll()
 
@@ -72,15 +74,16 @@ func (h httpHandlerImpl) GetAllComment(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, gin.H{"data": comments})
 }
 
-// DeleteCar godoc
-// @Summary Delete car identified by given id
-// @Description Delete the car corresponding to the input id
-// @Tags cars
+// Delete Comment godoc
+// @Summary Delete comment identified by given id
+// @Description Delete the comment corresponding to the input id
+// @Tags Comment
 // @Accept json
 // @Produce json
-// @Param id path int true "ID of the car to be deleted"
+// @Param id path int true "ID of the comment to be deleted"
 // @Success 204 "No content"
-// @Router /cars/{Id} [delete]
+// @Router /comment/{Id} [delete]
+// @Security Bearer
 func (h httpHandlerImpl) DeleteComment(ctx *gin.Context) {
 	getId := ctx.Param("id")
 	id, errConv := strconv.Atoi(getId)
@@ -99,14 +102,15 @@ func (h httpHandlerImpl) DeleteComment(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, gin.H{"deleted:": true})
 }
 
-// GetOneCars godoc
+// Get Comment By Id godoc
 // @Summary Get details for a given id
-// @Description Get details of car corresponding to the input id
-// @Tags cars
+// @Description Get details of comment corresponding to the input id
+// @Tags Comment
 // @Accept json
 // @Produce json
 // @Success 200 {object} entities.Comment
-// @Router /cars/{Id} [get]
+// @Router /comment/{Id} [get]
+// @Security Bearer
 func (h httpHandlerImpl) GetOneComment(ctx *gin.Context) {
 	getId := ctx.Param("id")
 	id, errConv := strconv.Atoi(getId)
@@ -125,15 +129,16 @@ func (h httpHandlerImpl) GetOneComment(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, gin.H{"data one": comment})
 }
 
-// UpdateCar godoc
-// @Summary Update car identified by given id
-// @Description Update details of car corresponding to the input id
-// @Tags cars
+// Update Comment godoc
+// @Summary Update comment identified by given id
+// @Description Update details of Comment corresponding to the input id
+// @Tags Comment
 // @Accept json
 // @Produce json
-// @Param id path int true "ID of the car to be updated"
+// @Param id path int true "ID of the comment to be updated"
 // @Success 200 {object} entities.Comment
-// @Router /cars/{Id} [patch]
+// @Router /comment/{Id} [patch]
+// @Security Bearer
 func (h httpHandlerImpl) UpdateComment(ctx *gin.Context) {
 	getId := ctx.Param("id")
 	id, errConv := strconv.Atoi(getId)
